crates/ty_python_semantic/resources/mdtest/snapshots/no_matching_overload…_-_No_matching_overload…_-_Calls_to_overloaded_…_(3553d085684e16a0).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: no_matching_overload.md - No matching overload diagnostics - Calls to overloaded functions
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/no_matching_overload.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import overload
 2 | 
 3 | @overload
 4 | def f(x: int) -> int: ...
 5 | 
 6 | @overload
 7 | def f(x: str) -> str: ...
 8 | 
 9 | def f(x: int | str) -> int | str:
10 |     return x
11 | 
12 | f(b"foo")  # error: [no-matching-overload]
```

# Diagnostics

```
error[no-matching-overload]: No overload of function `f` matches arguments
  --> src/mdtest_snippet.py:12:1
   |
10 |     return x
11 |
12 | f(b"foo")  # error: [no-matching-overload]
   | ^^^^^^^^^
   |
info: rule `no-matching-overload` is enabled by default

```
